--- a/LogicCircuitEditor/LogicCircuitEditor.csproj
+++ b/LogicCircuitEditor/LogicCircuitEditor.csproj
@@ -24,5 +24,6 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
+        <PackageReference Include="YamlDotNet" Version="13.1.0" />
     </ItemGroup>
 </Project>
